assets/css/style.css
/* Google fonts import*/
@import url("https://fonts.googleapis.com/css2?family=Allura&family=Poppins:wght@300;400;500;600;700&display=swap");

/* Global CSS Styles*/

:root {
  /* Fonts */
  --primary-font: "Poppins", sans-serif;

  /* colour palette */

  --primary-bg-colour: #f6eddc;
  --secondary-bg-colour: #13817b;

  --primary-font-colour: #ffffff;
  --secondary-font-colour: #dca32c;

  --btn-hover-colour: #dca32c;
  --btn-colour: #e87d1e;
  --nav-footer-colour: #110b06;
}

body {
  font-family: var(--primary-font);
  padding-top: 56px;
}

.custom-navbar {
  background-color: var(--nav-footer-colour);
}

.custom-navbar a {
  color: var(--primary-font-colour);
}

.custom-navbar a:hover {
  color: var(--secondary-font-colour);
}

.custom-navbar .nav-link.active {
  color: var(--btn-hover-colour) !important;
}

#navbar-logo {
  display: none;
}

.navbar img {
  cursor: pointer;
}

.custom-navbar #book-btn {
  background-color: #7fe7d6;
  color: var(--nav-footer-colour) !important;
  border: none;
}

.custom-navbar #book-btn:hover {
  background-color: var(--btn-hover-colour);
  color: white;
}

/* Styles for footer */

footer {
  background-color: var(--nav-footer-colour);
  color: var(--primary-bg-colour);
  border-top: 3px solid var(--secondary-bg-colour);
}

.footer-logo {
  max-width: 160px;
}

.footer-heading {
  color: var(--secondary-bg-colour);
  margin-bottom: 1rem;
  font-weight: 600;
}

footer a {
  color: var(--primary-bg-colour);
  text-decoration: none;
  transition: 0.3s ease;
}

footer a:hover {
  color: var(--secondary-bg-colour);
}

.footer-bottom {
  background-color: #000;
  font-size: 0.9rem;
}

#homepage-hero {
  min-height: 100vh;
  background:
    linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
    url("../images/homepage-mobile.webp");

  background-repeat: no-repeat;
  background-position: 63% 40%;
}

#homepage-hero .hero-content {
  padding-top: 60px;
  text-align: center;
}

#homepage-hero .hero-script {
  font-family: "Allura", cursive;
  font-size: 4rem;
  color: #7fe7d6;
  margin-bottom: -10px;
  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
}

#homepage-hero .hero-title {
  font-size: 3rem;
  font-weight: 700;
  color: white;
  text-transform: uppercase;
  margin-bottom: 15px;
  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
}

#homepage-hero .hero-text {
  font-size: 1.3rem;
  color: white;
  line-height: 1.5;
  display: flex;
  margin-bottom: 15px;
  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
}

#homepage-hero .book-btn {
  background-color: #7fe7d6;
  font-weight: 450;
  margin-top: 15px;
  border-color: #7fe7d6;
}

#homepage-hero .book-btn:hover {
  background-color: #dca32c;
}

.about-tiki-craft {
  background-color: var(--primary-bg-colour);
}

.section-title {
  font-size: 1.3rem;
  color: var(--secondary-bg-colour);
}

.section-text {
  color: var(--nav-footer-colour);
  font-size: 1.05rem;
  line-height: 1.8;
  max-width: 820px;
  margin: 0 auto;
  line-height: 1.8;
  font-weight: 400;
}

.section-info {
  color: var(--nav-footer-colour);
  letter-spacing: 1px;
  font-weight: 500;
}

#icon {
  width: 100px;
  height: auto;
}

.offer-icon {
  width: 80px;
  height: auto;
}

/* Changes the font weight and header size in the what we offer section */
.offer-grid p {
  font-weight: 400;
  line-height: 1.8;
  font-size: 1.05rem;
  color: var(--nav-footer-colour);
}

.offer-grid h3 {
  font-size: 1.3rem;
  color: var(--nav-footer-colour);
}

.card {
  border-radius: 18px;
  border: none;
  overflow: hidden;
  box-shadow: 0 12px 28px rgba(19, 129, 123, 0.25) !important;
}

.card-img-top {
  height: 240px;
  object-fit: cover;
}

.btn-outline-info {
  border-color: var(--secondary-bg-colour);
  color: var(--secondary-bg-colour);
}

.btn-outline-info:hover {
  border-color: var(--btn-hover-colour);
  background-color: var(--btn-hover-colour);
  color: white;
}

/* Gallery Section */

.gallery-section {
  background-color: var(--secondary-bg-colour);
}

.section-info-inv {
  color: var(--primary-bg-colour);
  letter-spacing: 1px;
  font-weight: 500;
}

.section-title-inv {
  font-size: 1.3rem;
  color: var(--btn-hover-colour);
}

.section-text-inv {
  color: var(--primary-bg-colour);
  font-size: 1.05rem;
  line-height: 1.8;
  max-width: 820px;
  margin: 0 auto;
  line-height: 1.8;
  font-weight: 400;
}

.scroll-container {
  display: flex;
  gap: 1.2rem;
  overflow-x: auto;
  padding: 1rem;
  scroll-behavior: smooth;
}

.scroll-container img {
  height: 380px;
  width: auto;
  border-radius: 22px;
  object-fit: cover;
  flex-shrink: 0;
  transition: transform 0.3s ease;
}

.scroll-container img:hover {
  transform: translateY(-6px);
}

.btn-outline-success {
  color: var(--primary-bg-colour);
  border-color: var(--primary-bg-colour);
}

/* Final call to action section */
#homepage-final-cta {
  padding: 1rem 1rem;
}

#homepage-final-cta .cta-banner {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
    url(../images/final-cta-2.webp);
  background-size: cover;
  background-position: center;
  min-height: 300px;
  background-position: 60% 40%;
}

#homepage-final-cta .cta-title {
  font-size: 1.6rem;
  font-weight: 700;
  color: white;
  text-transform: uppercase;
  margin-bottom: 15px;
  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
}

#homepage-final-cta .cta-text {
  font-size: 1.2rem;
  color: white;
  font-weight: 500;
  line-height: 1.5;
  display: flex;
  margin-bottom: 15px;
  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.9);
}

#homepage-final-cta .book-btn {
  background-color: #7fe7d6;
  font-weight: 450;
  margin-top: 15px;
  border-color: #7fe7d6;
}

#homepage-final-cta .book-btn:hover {
  background-color: #dca32c;
}
/* Voyage Page CSS*/
/* Hero Image*/
#voyage-hero {
  min-height: 55vh;
  background:
    linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
    url("../images/voyage-hero.webp");
  background-repeat: no-repeat;
  background-position: 30% 70%;
  background-size: cover;
}
/* ... */

